[package]
name = "browser-engine-mvp"
version = "0.1.0"
edition = "2021"
authors = ["Foysal <ahfoysal30@gmail.com>"]
description = "MVP browser engine: HTML -> DOM -> CSS -> layout -> PNG"

[dependencies]
tiny-skia = "0.11"
fontdue = "0.9"
png = "0.17"
rustybuzz = "0.14"
rquickjs = { version = "0.11", features = ["macro"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip", "cookies"] }
url = "2.5"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = 3
lto = "thin"
